# http-echo-rs

./: .editorconfig  .env  .gitpod.yml  Cargo.toml  Makefile  README.md  build.rs
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml
contrib/docker/: Dockerfile
contrib/gitpod/: Dockerfile
server/: Cargo.toml
server/src/: lib.rs
src/: git.rs  main.rs  server.rs  version.rs
tests/: version.rs
version/: Cargo.toml
version/src/: lib.rs
