[package]
name = "http-echo"
version = "0.1.0"
authors = ["da-moon <damoon.azarpazhooh@ryerson.ca>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
actix-rt = "1.1.1"
actix-web = "3.1.0"
serde={version="1.0.117",features=["derive"]}
serde_json = "1.0.59"
log = "0.4.11"
env_logger = "0.7.1"

[build-dependencies]
git2={version="0.13.12",default-features=false,features=[]}
failure = "0.1.8"
quote = "1.0.7"
syn = "1.0.44"